adding the work done in class

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <div class="panel-body">
                 <form class="todoForm">
                   <fieldset>
-                    <textarea class="newTodo form-control"></textarea>
-                    <button type="submit" class="submitButton"> 
+                    <textarea class="newTodo form-control" id="todoText"></textarea>
+                    <button type="submit" class="submitButton" id="ButtonPost"> 
                       Post Todo
                     </button>
                   </fieldset>
@@ -40,17 +40,17 @@
               <div class="panel-heading">
                 <h3>List of todo's</h3>
               </div>
-              <div class="panel-body" class="listOfTodos">
+              <div class="panel-body" class="listOfTodos" id="TodoList">
 
               </div>
               <div class="buttons">
-                <button class="clearButton btn-info"> 
+                <button class="clearButton btn-info" id="ButtonClear"> 
                   Clear all Todo's
                 </button>
-                <button class="markAllButton btn-success"> 
+                <button class="markAllButton btn-success" id="ButtonMark"> 
                   Mark all Todo's
                 </button>
-                <button class="deleteButton btn-danger"> 
+                <button class="deleteButton btn-danger" id="ButtonDelete"> 
                   Delete all Todo's
                 </button>
               </div>
@@ -63,4 +63,6 @@
       Todo list application
     </footer>
   </body>
+
+  <script src="js/script.js"></script>
 </html>
